@@ -1250,13 +1250,13 @@ Titles and Help for the System Fields
 	
 	<!-- Import Plugins -->
 
-	<epp:phrase id="Plugin/Import/BibTeX:mod_load_failure">Failed to load required module Text::BibTeX</epp:phrase>
 	<epp:phrase id="Plugin/Import/BibTeX:unsupported_cite_type">Skipping unsupported citation type <epc:pin name="type"/></epp:phrase>
 	<epp:phrase id="Plugin/Import/BibTeX:skip_year">Skipping year '<epc:pin name="year"/>'</epp:phrase>
 	<epp:phrase id="Plugin/Import/BibTeX:skip_month">Skipping month '<epc:pin name="month"/>'</epp:phrase>
 	
-	<epp:phrase id="Plugin/Import/EndNote:mod_load_failure">Failed to load required module Text::Refer</epp:phrase>
 	<epp:phrase id="Plugin/Import/EndNote:unsupported_cite_type">Skipping unsupported citation type <epc:pin name="type"/></epp:phrase>
+	<epp:phrase id="Plugin/Import/EndNote:bad_author">Could not parse author: <epc:pin name="author" /></epp:phrase>
+	<epp:phrase id="Plugin/Import/EndNote:bad_editor">Could not parse editor: <epc:pin name="editor" /></epp:phrase>
 	
 	<epp:phrase id="Plugin/Import/XML:unexpected_element">Unexpected element: &lt;<epc:pin name="name"/>&gt;</epp:phrase>
 	<epp:phrase id="Plugin/Import/XML:unexpected_type">&lt;<epc:pin name="type"/>&gt; where &lt;<epc:pin name="expected"/>&gt; was expected inside &lt;<epc:pin name="fieldname"/>&gt;</epp:phrase>
@@ -1266,6 +1266,7 @@ Titles and Help for the System Fields
 	<epp:phrase id="Plugin/Import/XML:expected_item">&lt;<epc:pin name="type"/>&gt; where &lt;item&gt; was expected inside &lt;<epc:pin name="fieldname"/>&gt;</epp:phrase>
 	<epp:phrase id="Plugin/Import/XML:expected">Expected <epc:pin name="elements"/></epp:phrase>
 	<epp:phrase id="Plugin/Import/DefaultXML:no_subclass">xml_to_epdata should be overridden.</epp:phrase>
+	<epp:phrase id="Plugin/Import/DefaultXML:unexpected_xml">Expected only text, found: <epc:pin name="xml" /></epp:phrase>
 
 
 
