@@ -81,7 +81,7 @@ sub xml_field_to_epdatafield
 			my $expect = $field->get_property( "datasetid" );
 			if( $type ne $expect )
 			{
-				$plugin->warning( "<$type> where <$expect> was expected inside <".$field->get_name.">" );
+				$plugin->warning( $plugin->phrase( "unexpected_type", type => $type, expected => $expect, fieldname => $field->get_name ) );
 				next;
 			}
 			my $sub_dataset = $plugin->{session}->get_repository->get_dataset( $expect );
@@ -93,7 +93,7 @@ sub xml_field_to_epdatafield
 		{
 			if( $type ne "file" )
 			{
-				$plugin->warning( "<$type> where <file> was expected inside <".$field->get_name.">" );
+				$plugin->warning( $plugin->phrase( "expected_file", type => $type, fieldname => $field->get_name ) );
 				next;
 			}
 			push @{$epdatafield}, $plugin->xml_to_file( $dataset,$el );
@@ -102,14 +102,14 @@ sub xml_field_to_epdatafield
 	
 		if( $field->is_virtual )
 		{
-			$plugin->warning( "<$type> is an unknown virtual field inside <".$field->get_name.">" );
+			$plugin->warning( $plugin->phrase( "unknown_virtual", type => $type, fieldname => $field->get_name ) );
 			next;
 		}
 	
 
 		if( $type ne "item" )
 		{
-			$plugin->warning( "<$type> where <item> was expected inside <".$field->get_name.">" );
+			$plugin->warning( $plugin->phrase( "expected_item", type => $type, fieldname => $field->get_name ) );
 			next;
 		}
 		push @{$epdatafield}, $plugin->xml_field_to_data_single( $dataset,$field,$el );
@@ -159,7 +159,7 @@ sub get_known_nodes
 		next unless EPrints::XML::is_dom( $el, "Element" );
 		if( defined $map{$el->nodeName()} )
 		{
-			$plugin->warning( "<$el> appears twice in one parent." );
+			$plugin->warning( "dup_element", name => $el );
 			next;
 		}
 		$map{$el->nodeName()} = $el;
@@ -175,8 +175,8 @@ sub get_known_nodes
 
 	foreach my $name ( keys %map )
 	{
-		$plugin->warning( "Unexpected element: <$name>" );
-		$plugin->warning( "Expected <".join("> <",@whitelist).">" );
+		$plugin->warning( "unexpected_element", name => $name );
+		$plugin->warning( "expected", elements => "<".join("> <", @whitelist).">" );
 	}
 	return %toreturn;
 }
